# yap

./: .env.example  .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: release.yml
scripts/: build-dmg.sh
src/: app.rs  config.rs  llm.rs  main.rs  state.rs  storage.rs  stt.rs  tray.rs  ui.rs  updater.rs
src/audio/: encode.rs  levels.rs  mod.rs
src/hotkey/: macos.rs  mod.rs
src/output/: mod.rs  paste.rs  typing.rs
src/ui/: mod.rs  pill.rs  settings.rs  theme.rs
